# world-racers

./: .env.example  .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml  README.md  docker-compose.yaml
backend/api/: Cargo.toml  Dockerfile  README.md
backend/api/src/: config.rs  db.rs  main.rs
backend/api/src/api/: auth.rs  health.rs  maps.rs  mod.rs  openapi.rs  parties.rs  t.json  users.rs  ws.rs
backend/auth/: Cargo.toml
backend/auth/src/: lib.rs  middleware.rs  user.rs
backend/entity/: Cargo.toml  README.md
backend/entity/src/: checkpoint.rs  lib.rs  map.rs  party.rs  prelude.rs  user.rs  user_party.rs
backend/migration/: Cargo.toml  README.md
backend/migration/src/: lib.rs  m20250412_020153_init_tables.rs  m20250412_022647_add_map_table.rs  m20250412_035913_make_CreatedAt_columns_default_to_now.rs  m20250412_035913_make_created_at_columns_default_to_now.rs  m20250412_040907_make_joined_at_columns_default_to_now.rs  m20250413_062158_add_map_id_to_party.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/backgrounds/Hyperspeed/: Hyperspeed.jsx
frontend/src/car/: arcade_physics.js  physics.js
frontend/src/components/: AuthScreen.jsx  DroneShotOne.jsx  GlobeModel.jsx  JoinPartyScreen.jsx  MapBuilder.jsx  MapBuilderExtended.jsx  MapSelectScreen.jsx  MultiplayerVehicle.jsx  RaceView.jsx  RoomScreen.jsx  StartScreen.jsx
frontend/src/components/DroneShots/: DroneShotOne.jsx
frontend/src/utils/: auth.js  websocket.js
scripts/: setup.sh  start.sh
scripts/websocket_tester/: README.md  cli.js  package-lock.json  package.json  position_listener.js  position_sender.js
